// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageMainActions/> renders correctly 1`] = `
<Box
  id="DebateStepPageMainActions"
>
  <Skeleton
    isLoaded={true}
    placeholder={<DebateStepPageMainActionsPlaceholder />}
  >
    <Flex
      alignItems="center"
      direction="column"
      spacing={4}
    >
      <Tag
        icon="CLOCK"
        variantColor="neutral-gray"
        variantType="badge"
      >
        global.ended
      </Tag>
      <Heading
        as="h2"
        color="gray.900"
        mb={2}
        textAlign="center"
      >
        Titre
      </Heading>
      <Relay(DebateStepPageVoteAndShare)
        isMobile={false}
        step={
          Object {
            " $fragmentRefs": null,
            " $refType": null,
            "timeRange": Object {
              "endAt": "2030-03-10 00:00:00",
            },
            "title": "Titre",
          }
        }
      />
    </Flex>
  </Skeleton>
</Box>
`;

exports[`<DebateStepPageMainActions/> renders correctly on mobile 1`] = `
<Box
  id="DebateStepPageMainActions"
>
  <Skeleton
    isLoaded={true}
    placeholder={<DebateStepPageMainActionsPlaceholder />}
  >
    <Flex
      alignItems="center"
      direction="column"
      spacing={4}
    >
      <Tag
        icon="CLOCK"
        variantColor="neutral-gray"
        variantType="badge"
      >
        global.ended
      </Tag>
      <Heading
        as="h2"
        color="gray.900"
        mb={2}
        textAlign="center"
      >
        Titre
      </Heading>
      <Relay(DebateStepPageVoteAndShare)
        isMobile={true}
        step={
          Object {
            " $fragmentRefs": null,
            " $refType": null,
            "timeRange": Object {
              "endAt": "2030-03-10 00:00:00",
            },
            "title": "Titre",
          }
        }
      />
    </Flex>
  </Skeleton>
</Box>
`;
